--- a/fongas01.html/fongas01.html
+++ b/fongas01.html/fongas01.html
@@ -13,14 +13,14 @@
       <h1>Nossas páginas</h1>
       <nav>
         <ul>
-          <li>Home</li>
-          <li>Alunos</li>
-          <li>fongas01</li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#alunos">Alunos</a></li>
+          <li><a href="#fongas01">Fongas01</a></li>
         </ul>
       </nav>
     </header>
 
-    <article id="Home">
+    <article id="home">
       <h2>Home</h2>
       <img src="./img/aprendendo.jpg" width="250px" height="200px" alt="Foto dos alunos em sala de aula">
       <p><strong>Toti é uma plataforma de ensino que forma refugiados e imigrantes</strong>
@@ -33,7 +33,7 @@
 
 
     <main>
-      <section id="Alunos">
+      <div id="alunos">
         <h2>Alunos</h2>
         <p>Com relação ao curso de desenvolvedor fullstack, os alunos já aprenderam:</p>
         <ul>
@@ -45,13 +45,12 @@
             <li>Html</li>
           </ol>
         </ul>
-      </section>
+      </div>
     </main>
 
     <section id="fongas01">
-      <p>Nossos alunos compartilham suas experiências aqui: 
-        <a href="https://github.com/fongas01/html_202102020.git"></a>
-      </p>
+    	<h2>Fongas01</h2>
+        <p>Nossos alunos compartilham suas experiências aqui: <a href="#">fongas01</a></p>
     </section>
     
     <footer>
